--- a/index.html
+++ b/index.html
@@ -1,9 +1,94 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p> This is an example of a simple HTML page with one paragraph.</p>
-    </body>
+<!doctype html>
+<html lang="en">
+
+
+<!-- === Header Starts === -->
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <title>ByteDance Robotics Research Projects</title>
+
+  <link href="./assets/bootstrap.min.css" rel="stylesheet">
+  <link href="./assets/font.css" rel="stylesheet" type="text/css">
+  <link href="./assets/style.css" rel="stylesheet" type="text/css">
+</head>
+<!-- === Header Ends === -->
+
+<body>
+
+
+<!-- === Homepage Starts === -->
+<div class="homepage">
+
+  <!-- === Header Starts === -->
+  <div class="header">
+    <div class="title">
+      Robotics Vision, Interaction and Manipulation
+
+    </div>
+<!--    <div class="subtitle">-->
+<!--      ByteDance Robotics Research-->
+<!--    </div>-->
+  </div>
+  <!-- === Header Ends === -->
+
+
+  <!-- === Projects Section Starts === -->
+  <div class="section">Robotics Vision</div>
+    <!--  FOVEABOX-->
+    <div class="project">
+    <div class="image">
+      <a href="./foveabox/" target="_blank">
+        <img src="./FoveaBox/files/demo.png">
+      </a>
+    </div>
+    <div class="info">
+      <b>FoveaBox: Beyond Anchor-based Object Detector</b> <br>
+      Tao Kong, Fuchun Sun, Huaping Liu, Yuning Jiang, Lei Li, Jianbo Shi <br>
+      <i>IEEE Transactions on Image Processin (TIP), 2020 </i> <br>
+      [<a href="https://arxiv.org/abs/1904.03797" target="_blank">Paper</a>]
+      [<a href="./FoveaBox/" target="_blank">Project Page</a>]
+      [<a href="https://github.com/taokong/FoveaBox" target="_blank">Code</a>]
+    </div>
+    </div>
+    <!--    SOLOv2-->
+    <div class="project">
+    <div class="image">
+      <a href="./solov2/" target="_blank">
+        <img src="./solov2/files/solov2.png">
+      </a>
+    </div>
+    <div class="info">
+      <b>SOLOv2: Dynamic and Fast Instance Segmentation</b> <br>
+      Xinlong Wang, Rufeng Zhang, Tao Kong, Lei Li, Chunhua Shen<br>
+      <i>Advances in Neural Information Processing Systems (NeurIPS), 2020</i> <br>
+      [<a href="https://arxiv.org/abs/2003.10152" target="_blank">Paper</a>]
+      [<a href="./solov2/" target="_blank">Project Page</a>]
+      [<a href="https://github.com/WXinlong/SOLO" target="_blank">Code</a>]
+      [<a href="https://www.youtube.com/watch?v=45saghXrDI8&t=5s" target="_blank">Demo Video</a>]
+    </div>
+    </div>
+    <!--    SOLO-->
+    <div class="project">
+    <div class="image">
+      <a href="./solo/" target="_blank">
+        <img src="./solo/files/solo.png">
+      </a>
+    </div>
+    <div class="info">
+      <b>SOLO: Segmenting Objects by Locations</b> <br>
+      Xinlong Wang, Tao Kong, Chunhua Shen, Yuning Jiang, Lei Li<br>
+      <i>European Conference on Computer Vision (ECCV), 2020</i> <br>
+      [<a href="https://arxiv.org/abs/1912.04488" target="_blank">Paper</a>]
+      [<a href="./solo/" target="_blank">Project Page</a>]
+      [<a href="https://github.com/WXinlong/SOLO" target="_blank">Code</a>]
+    </div>
+    </div>
+
+
+</div>
+
+</body>
+
+
 </html>
