--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 
   <!-- === Projects Section Starts === -->
+  <!--  Robotics Vision-->
   <div class="section">Robotics Vision</div>
     <!--  FOVEABOX-->
     <div class="project">
@@ -85,6 +86,25 @@
     </div>
     </div>
 
+
+  <!--  Robotics Interaction-->
+  <div class="section">Robotics Interaction</div>
+    <!--  FOVEABOX-->
+    <div class="project">
+    <div class="image">
+      <a href="./lts/" target="_blank">
+        <img src="./lts/files/demo.png">
+      </a>
+    </div>
+    <div class="info">
+      <b>Locate then Segment: A Strong Pipeline for Referring Image Segmentation</b> <br>
+      Ya Jing, Tao Kong, Wei Wang, Liang Wang, Lei Li, Tieniu Tan<br>
+      <i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021 </i> <br>
+      [<a href="https://arxiv.org/abs/2103.16284" target="_blank">Paper</a>]
+      [<a href="./lts/" target="_blank">Project Page</a>]
+      [<a href="https://mp.weixin.qq.com/s/jqDqybXe5isQZvx9dcAAnw" target="_blank">Post</a>]
+    </div>
+    </div>
 
 </div>
 
