--- a/index.html
+++ b/index.html
@@ -36,22 +36,6 @@
   <!-- === Projects Section Starts === -->
   <!--  Robotics Vision-->
   <div class="section">Robotics Vision</div>
-    <!--  FOVEABOX-->
-    <div class="project">
-    <div class="image">
-      <a href="./foveabox/" target="_blank">
-        <img src="./FoveaBox/files/demo.png">
-      </a>
-    </div>
-    <div class="info">
-      <b>FoveaBox: Beyond Anchor-based Object Detector</b> <br>
-      Tao Kong, Fuchun Sun, Huaping Liu, Yuning Jiang, Lei Li, Jianbo Shi <br>
-      <i>IEEE Transactions on Image Processin (TIP), 2020 </i> <br>
-      [<a href="https://arxiv.org/abs/1904.03797" target="_blank">Paper</a>]
-      [<a href="./FoveaBox/" target="_blank">Project Page</a>]
-      [<a href="https://github.com/taokong/FoveaBox" target="_blank">Code</a>]
-    </div>
-    </div>
     <!--    SOLOv2-->
     <div class="project">
     <div class="image">
@@ -67,6 +51,22 @@
       [<a href="./solov2/" target="_blank">Project Page</a>]
       [<a href="https://github.com/WXinlong/SOLO" target="_blank">Code</a>]
       [<a href="https://www.youtube.com/watch?v=45saghXrDI8&t=5s" target="_blank">Demo Video</a>]
+    </div>
+    </div>
+    <!--  FOVEABOX-->
+    <div class="project">
+    <div class="image">
+      <a href="./foveabox/" target="_blank">
+        <img src="./FoveaBox/files/demo.png">
+      </a>
+    </div>
+    <div class="info">
+      <b>FoveaBox: Beyond Anchor-based Object Detector</b> <br>
+      Tao Kong, Fuchun Sun, Huaping Liu, Yuning Jiang, Lei Li, Jianbo Shi <br>
+      <i>IEEE Transactions on Image Processin (TIP), 2020 </i> <br>
+      [<a href="https://arxiv.org/abs/1904.03797" target="_blank">Paper</a>]
+      [<a href="./FoveaBox/" target="_blank">Project Page</a>]
+      [<a href="https://github.com/taokong/FoveaBox" target="_blank">Code</a>]
     </div>
     </div>
     <!--    SOLO-->
@@ -103,6 +103,24 @@
       [<a href="https://arxiv.org/abs/2103.16284" target="_blank">Paper</a>]
       [<a href="./lts/" target="_blank">Project Page</a>]
       [<a href="https://mp.weixin.qq.com/s/jqDqybXe5isQZvx9dcAAnw" target="_blank">Post</a>]
+    </div>
+    </div>
+
+  <!--  Robotics Manipulation-->
+  <div class="section">Robotics Manipulation</div>
+    <!--  SSCL-->
+    <div class="project">
+    <div class="image">
+      <a href="./sscl/" target="_blank">
+        <img src="./sscl/files/demo.png">
+      </a>
+    </div>
+    <div class="info">
+      <b>Simultaneous Semantic and Collision Learning for 6-DoF Grasp Pose Estimation</b> <br>
+      Yiming Li, Tao Kong, Ruihang Chu, Yifeng Li, Peng Wang and Lei Li<br>
+      <i>IROS 2021 in Submission</i> <br>
+      [<a href="./sscl/" target="_blank">Paper</a>]
+      [<a href="./sscl/" target="_blank">Project Page</a>]
     </div>
     </div>
 
