--- a/lts/index.html
+++ b/lts/index.html
@@ -35,7 +35,7 @@
       <a href="http://www.cbsr.ia.ac.cn/users/tnt/tnt.htm">Tieniu Tan</a><sup>2</sup>,
   </div>
   <div class="institution">
-      <sup>1</sup>The University of Adelaide,&nbsp;&nbsp;&nbsp;
+      <sup>1</sup>Chinese Academy of Sciences,&nbsp;&nbsp;&nbsp;
       <sup>2</sup>ByteDance AI Lab
   </div>
   <div class="link">
