--- a/sscl/index.html
+++ b/sscl/index.html
@@ -46,7 +46,7 @@
 
     <table width="100%" style="margin: 20pt 0; text-align: center;">
       <tr>
-        <td><img src="files/lts.png" width="70%"></td>
+        <td><img src="files/sscl.png" width="80%"></td>
       </tr>
     </table>
 
