--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="info">
       <b>Locate then Segment: A Strong Pipeline for Referring Image Segmentation</b> <br>
       Ya Jing, Tao Kong, Wei Wang, Liang Wang, Lei Li, Tieniu Tan<br>
-      <i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021 </i> <br>
+      <i>Computer Vision and Pattern Recognition (CVPR), 2021 </i> <br>
       [<a href="https://arxiv.org/abs/2103.16284" target="_blank">Paper</a>]
       [<a href="./lts/" target="_blank">Project Page</a>]
       [<a href="https://mp.weixin.qq.com/s/jqDqybXe5isQZvx9dcAAnw" target="_blank">Post</a>]
