--- a/sscl/index.html
+++ b/sscl/index.html
@@ -46,7 +46,7 @@
 
     <table width="100%" style="margin: 20pt 0; text-align: center;">
       <tr>
-        <td><img src="files/sscl.png" width="80%"></td>
+        <td><img src="files/demo_main.png" width="60%"></td>
       </tr>
     </table>
 
@@ -66,6 +66,11 @@
     Our model is evaluated on large scale benchmarks as well as real robot system.
 
   </div>
+  <table width="100%" style="margin: 20pt 0; text-align: center;">
+      <tr>
+        <td><img src="files/sscl.png" width="80%"></td>
+      </tr>
+    </table>
 </div>
 <!-- === Overview Section Ends === -->
 
