--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
       <i>IROS 2021 in Submission</i> <br>
       [<a href="./sscl/" target="_blank">Paper</a>]
       [<a href="./sscl/" target="_blank">Project Page</a>]
+      [<a href="https://www.youtube.com/watch?v=bmtu2vnIq54" target="_blank">Demo Video</a>]
     </div>
     </div>
 
