--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- === Header Starts === -->
   <div class="header">
     <div class="title">
-      Robotics Vision, Interaction and Manipulation
+      Robotics Perception, Interaction and Manipulation
 
     </div>
 <!--    <div class="subtitle">-->
@@ -35,7 +35,7 @@
 
   <!-- === Projects Section Starts === -->
   <!--  Robotics Vision-->
-  <div class="section">Robotics Vision</div>
+  <div class="section">Perception</div>
     <!--    SOLOv2-->
     <div class="project">
     <div class="image">
@@ -88,7 +88,7 @@
 
 
   <!--  Robotics Interaction-->
-  <div class="section">Robotics Interaction</div>
+  <div class="section">Interaction</div>
     <!--  FOVEABOX-->
     <div class="project">
     <div class="image">
@@ -107,7 +107,7 @@
     </div>
 
   <!--  Robotics Manipulation-->
-  <div class="section">Robotics Manipulation</div>
+  <div class="section">Manipulation</div>
     <!--  SSCL-->
     <div class="project">
     <div class="image">
