--- a/index.html
+++ b/index.html
@@ -125,9 +125,20 @@
     </div>
     </div>
 
+  <div class="section">Contact Information</div>
+    <td>
+    <a href="https://lileicc.github.io" target="_blank">
+      <div style="margin-top: 5pt;">Lei Li</div>
+    </a>
+    </td>
+    <td>
+    <a href="http://www.taokong.org" target="_blank">
+      <div style="margin-top: 5pt;">Tao Kong</div>
+    </a>
+    </td>
+
+
 </div>
-
 </body>
-
 
 </html>
