--- a/index.html
+++ b/index.html
@@ -125,17 +125,25 @@
     </div>
     </div>
 
+  <!-- === Team Section Starts === -->
   <div class="section">Contact Information</div>
-    <td>
+    <div class="avatar">
     <a href="https://lileicc.github.io" target="_blank">
       <div style="margin-top: 5pt;">Lei Li</div>
     </a>
-    </td>
-    <td>
     <a href="http://www.taokong.org" target="_blank">
       <div style="margin-top: 5pt;">Tao Kong</div>
     </a>
-    </td>
+    </div>
+    <!-- === Team Section Ends === -->
+
+
+  <!-- === Acknowledgement Section Starts === -->
+  <div class="section">Acknowledgement</div>
+  <div class="acknowledgement">
+    We would like to acknowledge the suppor
+  </div>
+  <!-- === Acknowledgement Section Ends === -->
 
 
 </div>
