--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <!-- === Team Section Starts === -->
   <div class="section">Contact Information</div>
-    <div class="avatar">
+    <div class="acknowledgement">
     <a href="https://lileicc.github.io" target="_blank">
       <div style="margin-top: 5pt;">Lei Li</div>
     </a>
@@ -141,7 +141,7 @@
   <!-- === Acknowledgement Section Starts === -->
   <div class="section">Acknowledgement</div>
   <div class="acknowledgement">
-    We would like to acknowledge the suppor
+    We would like to acknowledge
   </div>
   <!-- === Acknowledgement Section Ends === -->
 
