--- a/index.html
+++ b/index.html
@@ -128,12 +128,8 @@
   <!-- === Team Section Starts === -->
   <div class="section">Contact Information</div>
     <div class="acknowledgement">
-    <a href="https://lileicc.github.io" target="_blank">
-      <div style="margin-top: 5pt;">Lei Li</div>
-    </a>
-    <a href="http://www.taokong.org" target="_blank">
-      <div style="margin-top: 5pt;">Tao Kong</div>
-    </a>
+      <a href="https://lileicc.github.io" target="_blank">Lei Li</a> (ByteDance AI Lab),
+      <a href="http://www.taokong.org" target="_blank">Tao Kong</a> (ByteDance AI Lab)
     </div>
     <!-- === Team Section Ends === -->
 
@@ -141,7 +137,7 @@
   <!-- === Acknowledgement Section Starts === -->
   <div class="section">Acknowledgement</div>
   <div class="acknowledgement">
-    We would like to acknowledge
+    We would like to acknowledge that may
   </div>
   <!-- === Acknowledgement Section Ends === -->
 
