--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
   <!-- === Team Section Starts === -->
   <div class="section">Contact Information</div>
     <div class="acknowledgement">
-      <a href="https://lileicc.github.io" target="_blank">Lei Li</a> (ByteDance AI Lab),
-      <a href="http://www.taokong.org" target="_blank">Tao Kong</a> (ByteDance AI Lab)
+      <a href="https://lileicc.github.io" target="_blank">Lei Li</a> ,
+      <a href="http://www.taokong.org" target="_blank">Tao Kong</a> 
     </div>
     <!-- === Team Section Ends === -->
 
@@ -137,7 +137,12 @@
   <!-- === Acknowledgement Section Starts === -->
   <div class="section">Acknowledgement</div>
   <div class="acknowledgement">
-    We would like to acknowledge that may
+    We would like to acknowledge that these works are jointly done by ByteDance AI Lab
+    and other research institutions
+    (Tsinghua University,
+    The University of Adelaide,
+    Chinese Academy of Sciences,
+    etc.).
   </div>
   <!-- === Acknowledgement Section Ends === -->
 
