--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
     </div>
 
   <!-- === Team Section Starts === -->
-  <div class="section">Contact Information</div>
+  <div class="section">Contact</div>
     <div class="acknowledgement">
       <a href="https://lileicc.github.io" target="_blank">Lei Li</a> ,
-      <a href="http://www.taokong.org" target="_blank">Tao Kong</a> 
+      <a href="http://www.taokong.org" target="_blank">Tao Kong</a>
     </div>
     <!-- === Team Section Ends === -->
 
@@ -138,7 +138,7 @@
   <div class="section">Acknowledgement</div>
   <div class="acknowledgement">
     We would like to acknowledge that these works are jointly done by ByteDance AI Lab
-    and other research institutions
+    and relevant research institutions
     (Tsinghua University,
     The University of Adelaide,
     Chinese Academy of Sciences,
