add option gail

--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@
     </div>
     </div>
 
+    <!--  Option GAIL-->
+    <div class="project">
+    <div class="image">
+      <a href="./optiongail/" target="_blank">
+        <img src="./optiongail/files/demo.png">
+      </a>
+    </div>
+    <div class="info">
+      <b>Adversarial Option-Aware Hierarchical Imitation Learning</b> <br>
+      Mingxuan Jing, Wenbing Huang, Fuchun Sun, Xiaojian Ma, Tao Kong, Chuang Gan and Lei Li<br>
+      <i>International Conference on Machine Learning (ICML), 2021</i> <br>
+      [<a href="./optiongail/" target="_blank">Paper</a>]
+      [<a href="./optiongail/" target="_blank">Project Page</a>]
+    </div>
+    </div>
+
   <!-- === Team Section Starts === -->
   <div class="section">Contact</div>
     <div class="acknowledgement">
