add option gail

--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
     </div>
     </div>
 
-  <!-- === Team Section Starts === -->
-  <div class="section">Contact</div>
-    <div class="acknowledgement">
-      <a href="https://lileicc.github.io" target="_blank">Lei Li</a> ,
-      <a href="http://www.taokong.org" target="_blank">Tao Kong</a>
-    </div>
-    <!-- === Team Section Ends === -->
+<!--  &lt;!&ndash; === Team Section Starts === &ndash;&gt;-->
+<!--  <div class="section">Contact</div>-->
+<!--    <div class="acknowledgement">-->
+<!--      <a href="https://lileicc.github.io" target="_blank">Lei Li</a> ,-->
+<!--      <a href="http://www.taokong.org" target="_blank">Tao Kong</a>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; === Team Section Ends === &ndash;&gt;-->
 
 
   <!-- === Acknowledgement Section Starts === -->
   <div class="section">Acknowledgement</div>
   <div class="acknowledgement">
-    We would like to acknowledge that these works are jointly done by ByteDance AI Lab
+    These works are jointly done by ByteDance AI Lab
     and relevant research institutions
     (Tsinghua University,
     The University of Adelaide,
