--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Robotics Perception, Interaction and Manipulation</title>
+  <title>Robotics Research on Semantic Perception and Interactive Action</title>
 
   <link href="./assets/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/font.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
   <!-- === Header Starts === -->
   <div class="header">
     <div class="title">
-      Robotics Perception, Interaction and Manipulation
+      Robotics Research on Semantic Perception, Interactive Action
 
     </div>
 <!--    <div class="subtitle">-->
@@ -35,7 +35,24 @@
 
   <!-- === Projects Section Starts === -->
   <!--  Robotics Vision-->
-  <div class="section">Perception</div>
+  <div class="section">Semantic Perception</div>
+    <!--  LTS-->
+    <div class="project">
+    <div class="image">
+      <a href="./lts/" target="_blank">
+        <img src="./lts/files/demo.png">
+      </a>
+    </div>
+    <div class="info">
+      <b>Locate then Segment: A Strong Pipeline for Referring Image Segmentation</b> <br>
+      Ya Jing, Tao Kong, Wei Wang, Liang Wang, Lei Li, Tieniu Tan<br>
+      <i>Computer Vision and Pattern Recognition (CVPR), 2021 </i> <br>
+      [<a href="https://arxiv.org/abs/2103.16284" target="_blank">Paper</a>]
+      [<a href="./lts/" target="_blank">Project Page</a>]
+      [<a href="https://mp.weixin.qq.com/s/jqDqybXe5isQZvx9dcAAnw" target="_blank">Post</a>]
+    </div>
+    </div>
+
     <!--    SOLOv2-->
     <div class="project">
     <div class="image">
@@ -53,6 +70,7 @@
       [<a href="https://www.youtube.com/watch?v=45saghXrDI8&t=5s" target="_blank">Demo Video</a>]
     </div>
     </div>
+
     <!--  FOVEABOX-->
     <div class="project">
     <div class="image">
@@ -69,6 +87,7 @@
       [<a href="https://github.com/taokong/FoveaBox" target="_blank">Code</a>]
     </div>
     </div>
+
     <!--    SOLO-->
     <div class="project">
     <div class="image">
@@ -87,27 +106,8 @@
     </div>
 
 
-  <!--  Robotics Interaction-->
-  <div class="section">Interaction</div>
-    <!--  FOVEABOX-->
-    <div class="project">
-    <div class="image">
-      <a href="./lts/" target="_blank">
-        <img src="./lts/files/demo.png">
-      </a>
-    </div>
-    <div class="info">
-      <b>Locate then Segment: A Strong Pipeline for Referring Image Segmentation</b> <br>
-      Ya Jing, Tao Kong, Wei Wang, Liang Wang, Lei Li, Tieniu Tan<br>
-      <i>Computer Vision and Pattern Recognition (CVPR), 2021 </i> <br>
-      [<a href="https://arxiv.org/abs/2103.16284" target="_blank">Paper</a>]
-      [<a href="./lts/" target="_blank">Project Page</a>]
-      [<a href="https://mp.weixin.qq.com/s/jqDqybXe5isQZvx9dcAAnw" target="_blank">Post</a>]
-    </div>
-    </div>
-
-  <!--  Robotics Manipulation-->
-  <div class="section">Manipulation</div>
+  <!--  Interactive Action -->
+  <div class="section">Interactive Action</div>
     <!--  SSCL-->
     <div class="project">
     <div class="image">
