--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- === Header Starts === -->
   <div class="header">
     <div class="title">
-      Robotics Research on Semantic Perception, Interactive Action
+      Robotics Research on Semantic Perception and Interactive Action
 
     </div>
 <!--    <div class="subtitle">-->
