--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Robotics Research on Semantic Perception and Interactive Action</title>
+  <title>Robotics Research on Semantic Perception and Interactive Manipulation</title>
 
   <link href="./assets/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/font.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
   <!-- === Header Starts === -->
   <div class="header">
     <div class="title">
-      Robotics Research on Semantic Perception and Interactive Action
+      Robotics Research on Semantic Perception and Interactive Manipulation
 
     </div>
 <!--    <div class="subtitle">-->
@@ -107,7 +107,7 @@
 
 
   <!--  Interactive Action -->
-  <div class="section">Interactive Action</div>
+  <div class="section">Interactive Manipulation</div>
     <!--  SSCL-->
     <div class="project">
     <div class="image">
