--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Robotics Research on Semantic Perception and Interactive Manipulation</title>
+  <title>Robotics Perception and Interactive Manipulation</title>
 
   <link href="./assets/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/font.css" rel="stylesheet" type="text/css">
@@ -23,8 +23,7 @@
   <!-- === Header Starts === -->
   <div class="header">
     <div class="title">
-      Robotics Research on Semantic Perception and Interactive Manipulation
-
+      Robotics Perception and Interactive Manipulation
     </div>
 <!--    <div class="subtitle">-->
 <!--      ByteDance Robotics Research-->
